addons/mail/static/src/scss/composer.scss
@font-face {
    font-family: 'emojifont';
    src: local('Segoe UI'),
         local('Apple Color Emoji'),
         local('Android Emoji'),
         local('Noto Color Emoji'),
         local('Twitter Color Emoji'),
         local('Twitter Color'),
         local('EmojiOne Color'),
         local('EmojiOne'),
         local(EmojiSymbols),
         local(Symbola);
}

// Emoji
.o_mail_emoji {
    display: inline-block;
    padding: 0;
    font-size: 1.3rem;
    font-family: emojifont;
}

.o_modal_fullscreen {
    z-index: $o-mail-ChatWindow-zindex + 1;

    .arrow {
        @include o-position-absolute(50%, $grid-gutter-width*0.5);
        border-radius: 100%;
        padding: 12px 16px 11px 18px;
        @include o-FileViewer-arrow;
    }

    .arrow-left {
        left: $grid-gutter-width*0.5;
        right: auto;
        padding: 12px 18px 11px 16px;
    }
}

.o_document_viewer_topbar_button {
    display: flex;
    align-items: center;
    align-self: stretch;

    &:hover {
        background-color: rgba($white, 0.1);
    }
}

.o_mail_composer_form .o_form_renderer  {
    padding-bottom: 0px;
    .oe-bordered-editor[name=body] .o_readonly {
        border: 1px solid $o-gray-300;
        padding: 4px;
    }
}

